force-app/main/default/objects/Account_Objective__c/Account_Objective__c.object-meta.xml
<CustomObject>
    <description>This object tracks individual business objectives for an account. Examples might include: &quot;Get this law firm to upgrade to Wall Builder 4,&quot; or &quot;Develop a Time Builder reference from the CFO at this firm.&quot;</description>
    <label>Account Objective</label>
    <nameField>
        <label>Account Objective Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Objectives</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>