force-app/main/default/objects/Account_Objective__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Which account is this account objective tied to?</description>
    <inlineHelpText>Which account is this account objective tied to?</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Objectives</relationshipLabel>
    <relationshipName>Account_Objectives</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>