force-app/main/default/objects/Account_Objective__c/fields/Next_Step__c.field-meta.xml
<CustomField>
    <fullName>Next_Step__c</fullName>
    <description>What is the next step in achieving this Account Objective?</description>
    <inlineHelpText>What is the next step in achieving this Account Objective?</inlineHelpText>
    <label>Next Step</label>
    <length>255</length>
    <type>Text</type>
</CustomField>